# pmpp-monorepo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run-tests.sh  vcpkg.json
.github/workflows/: ci.yml
Chap02/: CMakeLists.txt  cuda_util.h  grouped.cu  main.cu  main_orig_c_style.cu  main_standard_cpp.cu
Chap03/: CMakeLists.txt  CudaUtil.h  JpegUtil.cpp  JpegUtil.h  JpegUtil_test.cpp  MatrixUtil_test.cpp  matrix_util.cpp  matrix_util.h  s3_rgb_conversion.cu
common/: CudaUtil.h  LogicCheck.h
